Implémentation de la pagination.